==> kelv1n9/eHack/lib/CC1101/CC1101.cpp <==
#include "CC1101.h"
#include <math.h>
#include <Arduino.h>
#define WRITE_BURST     0x40
#define READ_SINGLE     0x80
#define READ_BURST      0xC0
#define BYTES_IN_RXFIFO 0x7F
#define F_OSC           26000000.0f
#define CC1101_SPI_SETTINGS SPISettings(4000000, MSBFIRST, SPI_MODE0)

byte CC1101::SpiReadStatus(byte addr) {
    byte value = 0;
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(addr | READ_BURST);
        value = _spi->transfer(0);
    }
    SpiEnd();
    return value;
}

byte CC1101::SpiReadReg(byte addr) {
    byte value = 0;
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(addr | READ_SINGLE);
        value = _spi->transfer(0);
    }
    SpiEnd();
    return value;
}

void CC1101::SpiWriteReg(byte addr, byte value) {
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(addr);
        _spi->transfer(value);
    }
    SpiEnd();
}

void CC1101::SpiStrobe(byte strobe) {
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(strobe);
    }
    SpiEnd();
}

void CC1101::SpiWriteBurstReg(byte addr, byte *buffer, byte num) {
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(addr | WRITE_BURST);
        for (byte i = 0; i < num; i++) _spi->transfer(buffer[i]);
    }
    SpiEnd();
}

void CC1101::SpiReadBurstReg(byte addr, byte *buffer, byte num) {
    SpiStart();
    if (WaitMiso()) {
        _spi->transfer(addr | READ_BURST);
        for (byte i = 0; i < num; i++) buffer[i] = _spi->transfer(0);
    }
    SpiEnd();
}

void CC1101::Init(SPIClass* spiBus) {
    _spi = spiBus;
    Init();
}

void CC1101::Init(void) {
    setSpi();
    
    pinMode(SCK_PIN, OUTPUT);
    pinMode(MOSI_PIN, OUTPUT);
    pinMode(MISO_PIN, INPUT);
    pinMode(SS_PIN, OUTPUT);

    if (!spi_initialized) {
        #ifdef ESP32
        _spi->begin(SCK_PIN, MISO_PIN, MOSI_PIN, SS_PIN);
        #else
        _spi->begin();
        #endif
        spi_initialized = true;
    }
    digitalWrite(SS_PIN, HIGH);
    digitalWrite(SCK_PIN, HIGH);
    digitalWrite(MOSI_PIN, LOW);
    
    Reset();
    RegConfigSettings();
}

void CC1101::Reset(void) {
    digitalWrite(SS_PIN, LOW);
    delayMicroseconds(10);
    digitalWrite(SS_PIN, HIGH);
    delayMicroseconds(40);
    _spi->beginTransaction(CC1101_SPI_SETTINGS);
    digitalWrite(SS_PIN, LOW);
    WaitMiso();                      // wait MISO=LOW with CS=LOW (chip ready)
    _spi->transfer(CC1101_SRES);
    WaitMiso();                      // wait MISO=LOW with CS=LOW (reset complete)
    digitalWrite(SS_PIN, HIGH);
    _spi->endTransaction();
}

void CC1101::setDRate(float d) {
    float baud = d * 1000.0f;
    if (baud > 600000) baud = 600000;
    if (baud < 600) baud = 600;

    byte drate_e = (byte)(log(baud * 268435456.0f / (F_OSC * 256.0f)) / log(2.0f));
    byte drate_m = (byte)((baud * 268435456.0f) / (F_OSC * pow(2, drate_e)) - 256 + 0.5f);
    
    byte current4 = SpiReadStatus(CC1101_MDMCFG4) & 0xF0; 
    SpiWriteReg(CC1101_MDMCFG4, current4 | (drate_e & 0x0F));
    SpiWriteReg(CC1101_MDMCFG3, drate_m);
}

void CC1101::setRxBW(float f) {
    float target = f * 1000.0f;
    float ratio = F_OSC / (8.0f * target);
    
    // AVR Safe Logarithm
    int e = (int)(log(ratio / 4.0f) / log(2.0f));
    if (e < 0) e = 0;
    if (e > 3) e = 3;
    
    int m = (int)roundf((ratio / pow(2, e)) - 4.0f);
    if (m < 0) m = 0;
    if (m > 3) m = 3;
    
    byte current4 = SpiReadStatus(CC1101_MDMCFG4) & 0x0F;
    SpiWriteReg(CC1101_MDMCFG4, ((byte)e << 6) | ((byte)m << 4) | current4);
}

void CC1101::setPA(int p) {
    int a = 0;
    pa = p;

    if (MHz >= 300 && MHz <= 348) {
        if (pa <= -30) a = PA_TABLE_315[0];
        else if (pa <= -20) a = PA_TABLE_315[1];
        else if (pa <= -15) a = PA_TABLE_315[2];
        else if (pa <= -10) a = PA_TABLE_315[3];
        else if (pa <= 0)   a = PA_TABLE_315[4];
        else if (pa <= 5)   a = PA_TABLE_315[5];
        else if (pa <= 7)   a = PA_TABLE_315[6];
        else a = PA_TABLE_315[7];
        last_pa = 1;
    } else if (MHz >= 378 && MHz <= 464) {
        if (pa <= -30) a = PA_TABLE_433[0];
        else if (pa <= -20) a = PA_TABLE_433[1];
        else if (pa <= -15) a = PA_TABLE_433[2];
        else if (pa <= -10) a = PA_TABLE_433[3];
        else if (pa <= 0)   a = PA_TABLE_433[4];
        else if (pa <= 5)   a = PA_TABLE_433[5];
        else if (pa <= 7)   a = PA_TABLE_433[6];
        else a = PA_TABLE_433[7];
        last_pa = 2;
    } else if (MHz >= 779 && MHz <= 899.99) {
        if (pa <= -30) a = PA_TABLE_868[0];
        else if (pa <= -20) a = PA_TABLE_868[1];
        else if (pa <= -15) a = PA_TABLE_868[2];
        else if (pa <= -10) a = PA_TABLE_868[3];
        else if (pa <= -6)  a = PA_TABLE_868[4];
        else if (pa <= 0)   a = PA_TABLE_868[5];
        else if (pa <= 5)   a = PA_TABLE_868[6];
        else if (pa <= 7)   a = PA_TABLE_868[7];
        else if (pa <= 10)  a = PA_TABLE_868[8];
        else a = PA_TABLE_868[9];
        last_pa = 3;
    } else if (MHz >= 900 && MHz <= 928) {
        if (pa <= -30) a = PA_TABLE_915[0];
        else if (pa <= -20) a = PA_TABLE_915[1];
        else if (pa <= -15) a = PA_TABLE_915[2];
        else if (pa <= -10) a = PA_TABLE_915[3];
        else if (pa <= -6)  a = PA_TABLE_915[4];
        else if (pa <= 0)   a = PA_TABLE_915[5];
        else if (pa <= 5)   a = PA_TABLE_915[6];
        else if (pa <= 7)   a = PA_TABLE_915[7];
        else if (pa <= 10)  a = PA_TABLE_915[8];
        else a = PA_TABLE_915[9];
        last_pa = 4;
    }
    
    uint8_t paTable[8] = {0,0,0,0,0,0,0,0};
    if (modulation == 2) {
        paTable[0] = 0; paTable[1] = a;
    } else {
        paTable[0] = a; paTable[1] = 0;
    }
    SpiWriteBurstReg(CC1101_PATABLE, paTable, 8);
}

byte CC1101::CheckReceiveFlag(void) {
    if (trxstate != 2) SetRx();
    if (digitalRead(GDO0)) {
        uint32_t start = millis();
        while (digitalRead(GDO0) && (millis() - start < 200));
        return 1;
    } else {
        return 0;
    }
}
